--- a/index.html
+++ b/index.html
@@ -12,3 +12,43 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Sail&display=swap" rel="stylesheet">
 </head>
+<body>
+    <div class="banner-1">
+        <header>
+            <h1>WorkWave</h1>
+            <button class="hamburger-menu">&#9776;</button>
+            <div class="header-navbar">
+                <ul>
+                    <li class="home">Home</li>
+                    <li>Service</li>
+                    <li>Contact</li>
+                    <li>About</li>
+                </ul>
+            </div>
+        </header>
+        <div class="banner-1-layer-1">
+            <div class="banner-1-textbox">
+                <h1>Keep your fitness in <i class="italics"> check </i> and stay healthy!</h1>
+                <p>Explore a vast array of wellness resources, including fitness tips, nutritious recipes, and inspiring transformation journeys to help you achieve and maintain a healthy lifestyle!</p>
+                <div class="banner-1-buttonbox">
+                    <button class="button-left">Join Club Now!</button>
+                    <button class="button-right">Download App</button>
+                </div>
+            </div>
+            <div class="banner-1-imgbox">
+                <img src="assets/Images 2.png">
+                <div class="banner-1-layer-2">
+                    <div class="vid-tutorial-box">
+                        <li class="red-circle"></li>
+                        <h3>300+ <br><span>Tutorial Videos</span> </h3>
+                    </div>
+                    <div class="free-vid-box">
+                        <h2>70+</h2>
+                        <p>Free Workout Videos</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+</body>
