--- a/index.html
+++ b/index.html
@@ -50,5 +50,33 @@
             </div>
         </div>
     </div>
+    <div class="banner-2">
+        <div class="change-habits">
+            <h1>Shift Your Habits</h1>
+            <p>Fitness should be accessible to everyone everywhere, and one doesn't need a gym to keep fit!</p>
+        </div>
+        <div class="habitbox">
+            <div class="habit-container">
+                <img src="assets/image 3.png">
+                <h4>Bodyweight</h4>
+                <p>Bodyweight exercise can be adopted into daily life to stay fit.</p>
+            </div>
+            <div class="habit-container">
+                <img src="assets/image 2.png">
+                <h4>Stretching</h4>
+                <p>Stretching improves blood flow and helps calm your mind.</p>
+            </div>
+            <div class="habit-container">
+                <img src="assets/image 4.png">
+                <h4>Free Weights</h4>
+                <p>Weights are an excellent way to stimulate specific muscles.</p>
+            </div>
+            <div class="habit-container">
+                <img src="assets/image 5.png">
+                <h4>Muscle Gain</h4>
+                <p>Steady muscle gain can improve overall fitness and health.</p>
+            </div>
+        </div>
+    </div>
     
 </body>
