--- a/index.html
+++ b/index.html
@@ -78,5 +78,17 @@
             </div>
         </div>
     </div>
+    <div class="banner-3-bg">
+        <div class="banner-3">
+            <div class="banner-3-left">
+                <h3>Run Long Distances With Ease</h3>
+                <p>We believe fitness should be available to everyone, and being fit and healthy should be a top goal of all people.</p>
+                <button>Join Now!</button>
+            </div>
+            <div class="banner-3-right">
+                <img src="assets/run.png">
+            </div>
+        </div>
+    </div>
     
 </body>
