--- a/index.html
+++ b/index.html
@@ -90,5 +90,52 @@
             </div>
         </div>
     </div>
+    <div class="banner-4">
+        <div class="banner-4-text">
+            <h5>BMI Calculator</h5>
+            <p>Easily calculate your Body Mass Index to get a generalised idea about your health.</p>
+        </div>
+        <div class="bmi-box">
+            <div class="bmi-box-left">
+                <h6>BMI Calculator Chart</h6>
+                <table>
+                    <tr>
+                        <th>BMI</th>
+                        <th>Weight Status</th>
+                    </tr>
+                    <tr>
+                        <td>Below 18.5</td>
+                        <td>Underweight</td>
+                    </tr>
+                    <tr>
+                        <td>18.5 - 24.9</td>
+                        <td>Healthy</td>
+                    </tr>
+                    <tr>
+                        <td>25.0 - 29.9</td>
+                        <td>Overweight</td>
+                    </tr>
+                    <tr>
+                        <td>Above 30.0</td>
+                        <td>Obese</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="bmi-box-right">
+                <h6>Calculate Your BMI</h6>
+                <p>Calculate your BMI with ease so that you are more well informed about your health and fitness.</p>
+                <div class="bmi-form">
+                    <form action="">
+                        <input type="Height" name="" id="" placeholder="Height">
+                        <input type="Weight" name="" id="" placeholder="Weight">
+                        <input type="Age" name="" id="" placeholder="Age">
+                        <input type="Sex" name="" id="" placeholder="Sex">
+                        <input type="Activity" name="" id="" placeholder="Activity Factor">
+                        <input class="submit-button" type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
