added banners 5 and 6

--- a/index.html
+++ b/index.html
@@ -137,5 +137,40 @@
             </div>
         </div>
     </div>
+    <div class="banner-5">
+        <div class="banner-5-textbox">
+            <h2>Meet The Team</h2>
+            <p>Meet our enthusiastic team of expertx who work tirelessly to help you achieve your fitness dreams!</p>
+        </div>
+        <div class="banner-5-picsbox">
+            <div class="banner-5-gridbox">
+                <div class="banner-5-griditem"><img src="assets/trainer1.png"><h6>Tony Soprano<br><span>Senior Trainer</span></h6></div>
+                <div class="banner-5-griditem"><img src="assets/trainer2.png"><h6>John Wick<br><span>Accupuncture Head</span></h6></div>
+                <div class="banner-5-griditem"><img src="assets/trainer3.png"><h6>Rick Sanchez<br><span>Assistant Trainer</span></h6></div>
+                <div class="banner-5-griditem"><img src="assets/trainer4.png"><h6>Tom Moriarty<br><span>Assistant Trainer</span></h6></div>
+                <div class="banner-5-griditem"><img src="assets/trainer5.png"><h6>Billy Butcher<br><span>Yoga Specialist</span> </h6></div>
+                <div class="banner-5-griditem"><img src="assets/trainer6.png"><h6>Michael Kichael<br><span>Accounts Manager</span> </h6></div>
+            </div>
+        </div>
+    </div>
+    <div class="banner-6">
+        <div class="banner-6-textbox">
+            <h2>Client Testimonials</h2>
+            <p>We have over 20,000 satisfied customers, and have a previous customer base of more than 300,000 people.</p>
+        </div>
+        <div class="banner-6-picsbox">
+            <div class="banner-6-gridbox">
+                <div class="banner-6-griditem"><img src="assets/customer1.png">
+                    <h6>Thomas B.<br><span>WorkWave Fitness delivers a great online workout experience with diverse programs, expert instructors, and a user-friendly platform. Whether you're a beginner or experienced, it offers personalized plans and engaging live classes to help you reach your fitness goals.</span></h6>
+                </div>
+                <div class="banner-6-griditem"><img src="assets/customer2.png">
+                    <h6>Jessica S.<br><span>WorkWave Fitness redefines home workouts with its versatile online platform. Offering an array of classes led by skilled instructors, it caters to all fitness levels. The intuitive design and motivational approach make staying active convenient and enjoyable.</span></h6>
+                </div>
+                <div class="banner-6-griditem"><img src="assets/customer3.png">
+                    <h6 style="color: black; margin-top: 100px; font-size: 40px;">... and 20,000 more!</h6>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
