--- a/index.html
+++ b/index.html
@@ -172,5 +172,38 @@
             </div>
         </div>
     </div>
-    
+    <footer>
+        <div class="footer-box">
+            <div class="footer-top">
+                <div class="footer-left">
+                    <h1>WorkWave</h1>
+                    <p>WorkWave is a dynamic online workout platform offering personalized fitness programs. With a wide range of on-demand classes, expert trainers, and a supportive community, it caters to all fitness levels. Whether you're aiming to build strength, lose weight, or improve overall wellness, WorkWave helps you achieve your goals at your own pace.</p>
+                </div>
+                <div class="footer-middle">
+                    <h6>Get Started</h6>
+                    <ul>
+                        <li>Service</li>
+                        <li>Contact Us</li>
+                        <li>Platform</li>
+                        <li>Affiliate Links</li>
+                    </ul>
+                </div>
+                <div class="footer-right">
+                    <h6>Our Links</h6>
+                    <ul>
+                        <li>About Us</li>
+                        <li>Workout Library</li>
+                        <li>App Download</li>
+                        <li>Collaborate</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-line">
+                <hr style="border: 1px solid rgba(0, 0, 0, 0.5); width: 80%;">
+            </div>
+            <div class="footer-bottom-text">
+                <h3>All Rights Reserved @WorkWwave 2024</h3>
+            </div>
+        </div>
+    </footer>
 </body>
